# katm_lib

./: .gitignore  README.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt  setup.py
.kimchi/docs/: katm_library_spec.md
notebooks/: 01_quickstart.ipynb  02_api_walkthrough.ipynb  03_speed_comparison.ipynb  bbc_classification_experiment.ipynb  bbc_news_experiment.ipynb  ekphrastic_experiment.ipynb  newsgroups_experiment.ipynb
src/katm/: __init__.py  clustering.py  document_builder.py  embedding.py  keyphrase_extractor.py  octis_data_prep.py  octis_eval.py  topic_assignment.py  topic_assignment_fast.py  topic_model.py  topic_model_fast.py  utils.py
tests/: test_import.py  test_pipeline.py
