[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "katm"
version = "0.1.0"
description = "Keyphrase Anchored Topic Modeling (KATM)"
readme = "README.md"
authors = [{name = "Eustace Ebhotemhen"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy",
    "scikit-learn",
    "sentence-transformers",
    "torch",
    "nltk",
    "keybert",
    "yake",
    "rake-nltk",
    "spacy",
    "gensim",
    "pandas",
    "matplotlib",
    "jupyter",
    "notebook",
    "octis",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/yourusername/katm"

[tool.setuptools.packages.find]
where = ["src"]